# pydangle-biopython

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  DIFFERENCES.md  LICENSE  Makefile  README.md  add-type-annotations-v2.patch  add-type-annotations.patch  measure_ppbuilder.patch  mkdocs.yml  pyproject.toml  rna_fallback.patch  top2018_analysis.json  top2018_analysis.txt
.claude/projects/-home-prisant-Desktop-Projects-pydangle-biopython/memory/: MEMORY.md  project_optimization_roadmap.md  project_tda_pipeline.md  project_top2018_dataset.md  reference_machines.md  user_role.md
docs/: api.md  contributing.md  getting-started.md  index.md
examples/: README.md
scripts/: benchmark.py  clean_pdb_headers.py  generate_changelog.sh  jsonl2txt.sh
scripts/hooks/: post-commit
src/pydangle_biopython/: __init__.py  builtins.py  cli.py  dssp.py  exceptions.py  fileinput.py  labels.py  main.py  measure.py  parser.py
tests/: conftest.py  test_builtins.py  test_chain_filter.py  test_cli.py  test_dssp.py  test_fileinput.py  test_labels.py  test_measure.py  test_parser.py
