[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydangle-biopython"
version = "0.5.1"
description = "Compute distances, angles, and dihedral angles in protein and nucleic acid structures (BioPython backend)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael G. Prisant", email = "info@prisantscientific.org"},
]
maintainers = [
    {name = "Michael G. Prisant", email = "info@prisantscientific.org"},
]
keywords = ["structural biology", "PDB", "mmCIF", "dihedral", "protein", "RNA", "DNA", "MolProbity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.80",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pylint",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.scripts]
pydangle-biopython = "pydangle_biopython.main:main"

[project.urls]
Homepage = "https://github.com/prisant/pydangle-biopython"
Repository = "https://github.com/prisant/pydangle-biopython"
Issues = "https://github.com/prisant/pydangle-biopython/issues"
Documentation = "https://prisant.github.io/pydangle-biopython"
Changelog = "https://github.com/prisant/pydangle-biopython/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "PLC", "PLE", "PLW", "RUF"]
ignore = [
    "RUF002",  # ambiguous unicode in docstrings (Greek letters α, en-dashes – are intentional)
    "RUF003",  # ambiguous unicode in comments (same)
    "PLC0415",  # import not at top-level (used deliberately in tests for optional deps)
]

[tool.ruff.lint.isort]
known-first-party = ["pydangle_biopython"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pylint.main]
load-plugins = []

[tool.pylint."messages control"]
# Disable rules already covered by ruff (style, imports) or mypy (types)
disable = [
    "C0103",  # invalid-name (module-level caching variables don't need UPPER_CASE)
    "C0114",  # missing-module-docstring (not required for all modules)
    "C0115",  # missing-class-docstring (not required for all classes)
    "C0116",  # missing-function-docstring (not required for all functions)
    "C0301",  # line-too-long (ruff handles this)
    "C0411",  # wrong-import-order (ruff isort handles this)
    "C0414",  # useless-import-alias (used for re-export in __init__.py)
    "E0611",  # no-name-in-module (mypy handles this)
    "R0903",  # too-few-public-methods (dataclasses trigger this)
    "R0911",  # too-many-return-statements (label classification functions)
    "R0912",  # too-many-branches (CLI main function)
    "R0913",  # too-many-arguments (measurement pipeline functions)
    "R0914",  # too-many-locals (measurement pipeline functions)
    "R0917",  # too-many-positional-arguments (measurement pipeline functions)
    "W0603",  # global-statement (used for DSSP cache)
    "W0611",  # unused-import (ruff F401 handles this)
    "W0612",  # unused-variable (ruff F841 handles this)
    "W0613",  # unused-argument (common in interfaces/callbacks)
    "W0718",  # broad-exception-caught (intentional for batch processing resilience)
]

[tool.pylint.format]
max-line-length = 88
